Bug 476814 - Replace new Integer() with Integer.valueOf()
Using Integer.valueOf() instead of new Integer() allows for the runtime
to cache commonly instantiated values; typically, this will be for values
in the range -128..127. Using valueOf is preferred for this reason.

Change-Id: I1022eb4973b760b830ace5d39b76eea9353d4ca2
Signed-off-by: Alex Blewitt <alex.blewitt@gmail.com>