@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -572,7 +572,7 @@ public class LaunchConfigurationInfo {
 	 * @throws CoreException if a problem is encountered
 	 */
 	protected void setIntegerAttribute(Element element) throws CoreException {
-		setAttribute(getKeyAttribute(element), new Integer(getValueAttribute(element)));
+		setAttribute(getKeyAttribute(element), Integer.valueOf(getValueAttribute(element)));
 	}
 
 	/**
