@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -116,7 +116,7 @@ public class LogicalStructureManager {
             if (i > 0 && i < selection.length() - 1) {
                 String comboKey= selection.substring(0, i + 1);
                 String selected= selection.substring(i + 1, selection.length());
-                fStructureTypeSelections.put(comboKey, new Integer(Integer.parseInt(selected)));
+                fStructureTypeSelections.put(comboKey, Integer.valueOf(Integer.parseInt(selected)));
             }
         }
     }
@@ -208,7 +208,7 @@ public class LogicalStructureManager {
         if (selected != null) {
             index= fStructureTypeIds.indexOf(selected.getId());
         }
-        Integer integer= new Integer(index);
+        Integer integer= Integer.valueOf(index);
         fStructureTypeSelections.put(combo, integer);
         storeStructureTypeSelections();
         storeStructureTypeIds();
