@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2013 IBM Corporation and others.
+ * Copyright (c) 2007, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -75,7 +75,7 @@ public class LaunchConfigurationComparator extends WorkbenchViewerComparator {
 			Iterator<ILaunchConfigurationType> iterator = types.iterator();
 			int i = 0;
 			while (iterator.hasNext()) {
-				fgCategories.put(iterator.next(), new Integer(i));
+				fgCategories.put(iterator.next(), Integer.valueOf(i));
 				i++;
 			}
 		}
