@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011, 2012 Wind River Systems and others.
+ * Copyright (c) 2011, 2015 Wind River Systems and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -45,7 +45,7 @@ public class VirtualItem {
         private Integer fIndexValue;
         
         public Index(int index) {
-            fIndexValue = new Integer(index);
+            fIndexValue = Integer.valueOf(index);
         }
         
         @Override
@@ -59,11 +59,11 @@ public class VirtualItem {
         }
         
         public void increment() {
-            fIndexValue = new Integer(fIndexValue.intValue() + 1);
+            fIndexValue = Integer.valueOf(fIndexValue.intValue() + 1);
         }
         
         public void decrement() {
-            fIndexValue = new Integer(fIndexValue.intValue() - 1);
+            fIndexValue = Integer.valueOf(fIndexValue.intValue() - 1);
         }
 
         public int intValue() {
